# circular-steel-reuse

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FUTURE_IMPROVEMENTS.md  README.md  THESIS_PRO.md  TODO.md  _commitmsg.txt  app.py  build_thesis_pdf.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/carbon/: factors.csv
data/case_study/: donor.json
data/samples/: donor.json  donor_real_us_sample.json
data/uk_sections_raw/: UB-secpropsdimsprops-EC3UKNA-UK-6-15-2026.xlsx  UC-secpropsdimsprops-EC3UKNA-UK-6-15-2026.xlsx
docs/: CASE_STUDY.md  CONNECTION_DATA_PLAN.md  DESIGN_PRINCIPLES.md  METHODOLOGY.md  OPTION_VALUE_ML.md  OVERVIEW.md  POSITIONING.md  PRE_DEMOLITION_AUDIT.md  PROCESS_MAP.md  ROADMAP_CERTIFIABLE_REUSE.md  SCENARIO_SWEEP_PLAN.md  UNBLOCK_UV.md  VALIDATION.md  national_annex_sources.md  pda_template.csv
docs/benchmark/: README.md  forces_compare.csv  forces_compare.md
docs/superpowers/specs/: 2026-06-13-full-revit-addon-match-workflow-design.md  (+2 more)
experiments/: test_ml.py
experiments/ml/: __init__.py  clustering.py  surrogate.py  synthetic.py  train.py
extractor/: pyrevit_extract.py
maid/: MAID_SYSTEM_PROMPT.md  Queue-Routine.ps1  README.md  Run-Maid.ps1
maid/routine/: R01-verify-tests.md  R02-docs-freshness.md  R03-todo-triage.md
pyrevit_extension/: README.md  demand_test2.json  demand_test_4.json  demandtest3.json  donor_test2.json  donortest3.json  steelreuse_shared_params.txt
scripts/: convert_uk_bluebook.py
src/steelreuse/: __init__.py  cli.py  evidence.py  extraction_review.py  ifc_extract.py  inventory.py  inventory_sheet.py  pipeline.py  resources.py  review_view.py  schema.py  sensitivity.py  survey.py  synthetic.py  validate_extraction.py  value_case_cli.py  writeback.py
tests/: test_app.py  test_audit.py  test_audit_grid.py  test_bluebook.py  test_buttons_pick.py  test_carbon.py  test_cli.py  test_connections.py  test_deconstruction.py  test_ec3.py  test_evidence.py  test_extraction_review.py  test_extractor_is_non_steel.py  test_forces.py  test_frame.py  test_hss.py  test_ifc.py  test_ifc_coords.py  test_inventory.py  test_inventory_sheet.py  test_labour.py  test_loads.py  test_match.py  test_mismatch.py  test_ml.py  test_moment_shape.py  test_narrative.py  test_panel_model.py  test_passport_export.py  test_pda_params.py  test_published_examples.py  test_report.py  test_result_tabs.py  test_results.py  test_results_provenance.py  test_results_view.py  test_review_model_ironpython.py  test_review_view.py  test_review_view_ironpython.py  test_rules.py  (+15 more)
(+134 files in other folders)
